<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".MainActivity">



    <ImageView
        android:id="@+id/logomega"
        android:src="@drawable/megasena"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="26:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="number"
        android:maxLength="2"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:hint="@string/number_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logomega" />

    <TextView
        android:id="@+id/txt_result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        tools:text="Ola mundo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_number" />


    <TextView
        android:id="@+id/txt_ValoresJogosMega"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="20sp"
        tools:text="Valores Jogos"
        android:textAlignment="center"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_result"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_generate"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:background="@drawable/background_button"
        android:text="@string/numer_generator"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_ValoresJogosMega" />

    <TextView
        android:id="@+id/txt_swapscreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/txt_quina"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_generate" />

    <ImageView
        android:id="@+id/btn_quina"
        android:layout_width="214dp"
        android:layout_height="72dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/background_btnquina"
        app:layout_constraintDimensionRatio="40:8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_swapscreen"
        app:srcCompat="@drawable/quina" />

</androidx.constraintlayout.widget.ConstraintLayout>