<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    tools:context=".quinaActiviy">

     <ImageView
        android:id="@+id/logoquina"
        android:layout_width="322dp"
        android:layout_height="131dp"
        android:layout_marginTop="32dp"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="26:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/quina" />


    <EditText
        android:id="@+id/edit_number_quina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="number"
        android:maxLength="2"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:hint="@string/number_hint_quina"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoquina" />

    <TextView
        android:id="@+id/txt_result_quina"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        tools:text="Numeros"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_number_quina" />

    <TextView
        android:id="@+id/txt_ValoresJogosQuina"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="20sp"
        tools:text="Valores Jogos"
        android:textAlignment="center"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_result_quina" />



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_generate_quina"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:background="@drawable/background_btngeneratenumbers"
        android:text="@string/numer_generator"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_ValoresJogosQuina" />

    <TextView
        android:id="@+id/txt_swapscreen_quina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/txt_mega"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_generate_quina" />

    <ImageView
        android:id="@+id/btn_mega"
        android:layout_width="214dp"
        android:layout_height="72dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/background_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_swapscreen_quina"
        app:srcCompat="@drawable/megasena" />


</androidx.constraintlayout.widget.ConstraintLayout>